<resources>
    <string name="app_name">ServiceApplication</string>
    <string name="go_to_app_permission_settings">Go to App Permission Settings</string>
    <string name="input_string_for_intent_service">Input String for Intent Service</string>
    <string name="is_post_notification_enabled">Is Post Notification Enabled?</string>
    <string name="show_service_notification">Show Service Notification</string>
    <string name="start_intent_service">Start Intent Service</string>
</resources>