<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/show_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_service_notification" />

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_string_for_intent_service" />

    <Button
        android:id="@+id/start_intent_buttton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_post_notification_enabled" />

    <TextView
        android:id="@+id/notification_enabled_text"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Granted!"
        android:textColor="@color/teal_700" />

    <Button
        android:id="@+id/show_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_app_permission_settings"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>